# voxel-carving-with-aruco

./: .gitignore  HSV_mask.py  README.md  parameters.txt
InputData/USS_Enterprise_H/: list.txt
InputData/USS_Enterprise_V/: list.txt
InputData/board02-hezi-40/: list.txt
InputData/board02-png-22/: 0.py  list.txt
InputData/board02-shitou-36/: list.txt
Src/: CMakeLists.txt  cameraView.h  foreground.cpp  main.cpp  multiImage.h  singleImage.h  voxel.cpp  voxel.h
